# harmony

./: .antigravity.md  .coveragerc  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  flake.nix  install_nix.sh  launch-tmux-harmony-ngrok.sh  nervousConfiguration.json  observerConfiguration.json  package-lock.json  package.json  pyproject.toml  requirements.txt  result  treefmt.toml  ubuntu-setup.sh  vitest.config.js
cameraContainer/: Dockerfile
diceCollector/: DiceCollector.ipynb  Observer.ipynb  Testing.ipynb  Training.ipynb  data.yaml  observerConfiguration.json
dma/: QEye.ipynb  dma.ipynb  dv.ipynb  metasystem.ipynb  quantumsystem.ipynb
harmony/: BMMachine.ipynb  BMMachine.py  Dockerfile  HarmonyEye.ipynb  HarmonyMachine.ipynb  HarmonyMachine.py  MechaCombatMachine.ipynb  __init__.py  bmServer.py  harmonyConfiguration.json  harmonyServer.py  harmonyServer.service  hexServer.py  observer  observerConfiguration.json  patched_objectToHull.py  requirements.txt  templates  userServer.py
harmony-core/: Cargo.toml
harmony-web/: Cargo.toml  patch_snapshot.rs  test_cv.rs
harmony-web/src/: api_objects.rs  main.rs
harmony-web/static/: HarmonyCanvas.js  HarmonyTemplate.css  HarmonyVR.js  discord_activity.js  discord_ui_events.js  object-collapse.js
harmony-web/templates/: ControlPanel.html  SessionList.html  calibrator.html  configurator.html  discord_activity.html  harmony.html  harmony_user.html  harmony_vr.html  index.html  new_camera.html  objects.html  observer.html
local_camera_management/: README.md  identifyUSBCameras.py  observerEyes.py
local_eye_management/: observerEyes.service
nervous/: camera.py  server.py
observer/: CalibratedObserver.ipynb  CalibratedObserver.py  DebugObserver.ipynb  HexObserver.ipynb  HexObserver.py  LICENSE  Observer.ipynb  dma  (+27 more)
(+107 files in other folders)
