[project]
name = "harmony"
version = "0.0.1"
requires-python = ">3.10"

[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
packages = ["harmony", "observer"]
include-package-data = true

[tool.setuptools.package-data]
"harmony" = ["**/*.ipynb"]
"observer" = ["**/*.ipynb"]

[project.scripts]
harmony = "harmony.harmonyServer:main"
observer = "observer.observerServer:main"
