[project]
name = "nervous"
version = "0.0.1"
requires-python = ">3.10"

[build-system]
requires = ["setuptools", "setuptools-scm"]

[tool.setuptools]
packages = ["nervous", "observer"]
include-package-data = true

[tool.setuptools.package-data]
"nervous" = ["**/*.html", "**/*.css", "**/*.js", "**/*.jpg", "**/*.png"]
"observer" = ["**/*.html", "**/*.css", "**/*.js", "**/*.jpg", "**/*.png"]

[project.scripts]
nervous = "nervous.server:main"
observer = "observer.server:main"
